# minimal-model

./: README.md  cnf2lp.py
appliresult/aprove09result/MMSAT/: AProVE09-05.cnf.txt  AProVE09-06.cnf.txt  AProVE09-07.cnf.txt  AProVE09-11.cnf.txt  AProVE09-12.cnf.txt  AProVE09-21.cnf.txt  AProVE09-22.cnf.txt  AProVE09-25.cnf.txt
appliresult/aprove09result/MRSAT/: AProVE09-01.cnf.txt  AProVE09-03.cnf.txt  AProVE09-05.cnf.txt  AProVE09-06.cnf.txt  AProVE09-08.cnf.txt  AProVE09-12.cnf.txt  AProVE09-17.cnf.txt  AProVE09-21.cnf.txt  AProVE09-22.cnf.txt  AProVE09-25.cnf.txt
appliresult/aprove09result/clingo/: AProVE09-03.cnf.txt  AProVE09-07.cnf.txt  AProVE09-10.cnf.txt  AProVE09-19.cnf.txt  AProVE09-20.cnf.txt  AProVE09-21.cnf.txt  AProVE09-22.cnf.txt  AProVE09-24.cnf.txt
appliresult/c32satresult/MMSAT/: post-c32s-gcdm16-22.cnf.txt  post-c32s-gcdm16-23.cnf.txt  post-c32s-ss-8.cnf.txt  post-cbmc-aes-d-r2-noholes.cnf.txt  post-cbmc-aes-ee-r3-noholes.cnf.txt  post-cbmc-aes-ele-noholes.cnf.txt  post-cbmc-zfcp-2.8-u2-noholes.cnf.txt
appliresult/c32satresult/MRSAT/: post-c32s-col400-16.cnf.txt  post-c32s-ss-8.cnf.txt  post-cbmc-aes-d-r2-noholes.cnf.txt  post-cbmc-aes-ee-r3-noholes.cnf.txt  post-cbmc-aes-ele-noholes.cnf.txt  post-cbmc-zfcp-2.8-u2-noholes.cnf.txt
appliresult/c32satresult/clingo/: post-c32s-col400-16.cnf.txt  post-c32s-gcdm16-22.cnf.txt  post-c32s-gcdm16-23.cnf.txt  post-cbmc-aes-d-r2-noholes.cnf.txt  post-cbmc-aes-ee-r3-noholes.cnf.txt  post-cbmc-aes-ele-noholes.cnf.txt
appliresult/sat08result/MMSAT/: aloul-chnl11-13.cnf.txt  cmu-bmc-longmult15.cnf.txt  goldb-heqc-alu4mul.cnf.txt  goldb-heqc-dalumul.cnf.txt  goldb-heqc-frg1mul.cnf.txt  goldb-heqc-x1mul.cnf.txt  hoons-vbmc-lucky7.cnf.txt  mizh-md5-47-4.cnf.txt  mizh-sha0-36-3.cnf.txt  schup-l2s-abp4-1-k31.cnf.txt  schup-l2s-bc56s-1-k391.cnf.txt  schup-l2s-motst-2-k315.cnf.txt  simon-s03-w08-15.cnf.txt  velev-engi-uns-1.0-4nd.cnf.txt  velev-vliw-uns-4.0-9-i1.cnf.txt
appliresult/sat08result/MRSAT/: cmu-bmc-barrel6.cnf.txt  cmu-bmc-longmult15.cnf.txt  een-tip-sat-texas-tp-5e.cnf.txt  goldb-heqc-frg1mul.cnf.txt  goldb-heqc-x1mul.cnf.txt  manol-pipe-c10nidw.cnf.txt  manol-pipe-c6bidw_i.cnf.txt  manol-pipe-g10nid.cnf.txt  mizh-md5-48-5.cnf.txt  mizh-sha0-36-3.cnf.txt  schup-l2s-abp4-1-k31.cnf.txt  schup-l2s-bc56s-1-k391.cnf.txt  simon-s03-w08-15.cnf.txt  velev-vliw-uns-4.0-9-i1.cnf.txt
appliresult/sat08result/clingo/: cmu-bmc-barrel6.cnf.txt  cmu-bmc-longmult15.cnf.txt  een-tip-sat-texas-tp-5e.cnf.txt  goldb-heqc-dalumul.cnf.txt  goldb-heqc-frg1mul.cnf.txt  goldb-heqc-x1mul.cnf.txt  hoons-vbmc-lucky7.cnf.txt  manol-pipe-c10nid_i.cnf.txt  manol-pipe-c10nidw.cnf.txt  manol-pipe-c6bidw_i.cnf.txt  manol-pipe-g10nid.cnf.txt  mizh-sha0-35-3.cnf.txt  schup-l2s-abp4-1-k31.cnf.txt  schup-l2s-motst-2-k315.cnf.txt
appliresult/satcom09result/MMSAT/: ndhf_xits_17_UNKNOWN.cnf.txt  ndhf_xits_22_SAT.cnf.txt  rbcl_xits_14_SAT.cnf.txt
appliresult/satcom09result/MRSAT/: ndhf_xits_17_UNKNOWN.cnf.txt  ndhf_xits_20_SAT.cnf.txt  ndhf_xits_21_SAT.cnf.txt  rpoc_xits_17_SAT.cnf.txt
appliresult/satcom09result/clingo/: ndhf_xits_20_SAT.cnf.txt  ndhf_xits_22_SAT.cnf.txt  rbcl_xits_14_SAT.cnf.txt
cnfresult/MMMRresults/: allsatMMSAT.csv  allsatMRSAT.csv  allunknownMMSAT.csv  allunknownMRSAT.csv  allunsatMMSAT.csv  allunsatMRSAT.csv
cnfresult/MMMRresults/1000_1001/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCheck.csv  unsatLoopCompute.csv
cnfresult/MMMRresults/200_400/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCompute.csv  unsatLoopCheck.csv  unsatLoopCompute.csv
cnfresult/MMMRresults/400_600/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCheck.csv  unknownLoopCompute.csv  unsatLoopCheck.csv  unsatLoopCompute.csv
cnfresult/MMMRresults/50_200/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCompute.csv  unsatLoopCheck.csv  unsatLoopCompute.csv
cnfresult/MMMRresults/600_700/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCheck.csv  unknownLoopCompute.csv  unsatLoopCheck.csv
cnfresult/MMMRresults/700_800/: satLoopCheck.csv  satLoopCompute.csv  unknownLoopCheck.csv  unsatLoopCompute.csv
cnfresult/clingoresults/: allsatClingo.csv  allunknownClingo.csv  allunsatClingo.csv
minimal_model/minimal/: BaseSolver.h  Dimacs.h  Graph.h  MMSolver.cpp
minimaldiagnosis/: README.md
minimaldiagnosis/Verilog2CNF/: CMakeLists.txt
minimaldiagnosis/Verilog2CNF/verilog2cnf/: CMakeLists.txt  cnf_driver.cpp  cnf_driver.h  main.cpp  verilog.l  verilog.yy  verilog_driver.cpp  verilog_driver.hpp  verilog_scanner.hpp
minimaldiagnosis/minimal_diagnosis_code/: CMakeLists.txt  README.md  c17-1.txt
minimaldiagnosis/minimal_diagnosis_code/diagnosis/: DiagnosisBaseSolver.cpp  DiagnosisBaseSolver.h  DiagnosisMinimalSolver.cpp  DiagnosisMinimalSolver.h  DiagnosisSATSolver.cpp  DiagnosisSATSolver.h  Main.cpp
minimaldiagnosis/minimal_diagnosis_code/minimal/: BaseSolver.cpp  BaseSolver.h  Graph.cpp  MRSolver.cpp  MRSolver.h
minimalmodel/: README.md
minimalmodel/minimal_model_code/: CMakeLists.txt
minimalmodel_MR/: README.md
minimalmodel_MR/minimal_model_mr_code/: CMakeLists.txt
(+4046 files in other folders)
